--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "match-sorter": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
     "sort-by": "^1.2.0",
